change to production

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,6 +77,17 @@ a {
     &:active {
         text-decoration: none;
     }
+
+    &:focus {
+        text-decoration: none;
+    }
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
 
 .icon {
