--- a/wall/templates/index.html
+++ b/wall/templates/index.html
@@ -5,6 +5,8 @@
     <section m-b3>
         <div class="container text-center m-t2">
             <h1 class="title">Freedom Wall</h1>
+            <p class="sub-title">By: Chad</p>
+            <a target="_blank" href="https://github.com/chadsantiago/FreedomWall"><p class="sub-title"><i class="fab fa-github"></i></p></a>
         </div>
     
         <div class="secondary-container">
