--- a/wall/templates/base.html
+++ b/wall/templates/base.html
@@ -45,7 +45,7 @@
             {% else %}
                 {{ form.content(class='notepad', id="notepad", maxlength="280", style="resize: none; overflow:auto;", placeholder="What's up?", type="text", title="content", required="required") }}
             {% endif %}
-            <input class="icon fa fa-input" id="submit" type="submit" value="&#xf1d8;"/>
+            <input class="submit" class="icon fa fa-input" id="submit" type="submit" value="&#xf1d8;"/>
         </div>
         </form>
 
