--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,7 +49,7 @@ body {
 
 .context {
     font-family: $primary-font;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     line-height: 20px;
     letter-spacing: 2px;
@@ -68,22 +68,22 @@ a {
 
     &:link {
         text-decoration: none;
-        color: transparent;
+        outline: 0;
       }
 
     &:visited {
         text-decoration: none;
-        color: transparent;
+        outline: 0;
     }
 
     &:active {
         text-decoration: none;
-        color: transparent;
+        outline: 0;
     }
 
     &:focus {
         text-decoration: none;
-        color: transparent;
+        outline: 0;
     }
 }
 
@@ -93,7 +93,6 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: none;
-    color: transparent;
 }
 
 .icon {
@@ -123,5 +122,10 @@ button:focus {
 
 .dummy {
     height: 130px;
+}
+
+.submit {
+    background: transparent;
+    -webkit-tap-highlight-color: transparent;
 }
 
