--- a/wall/templates/errors/500.html
+++ b/wall/templates/errors/500.html
@@ -3,7 +3,7 @@
 {% block body %}
 
         <section class="pd-t1">
-            <div class="container-content text-center">
+            <div class="container-content text-center pd-t2">
                <h2 class="title">Page doesn't exist!</h2>
             </div>
         </section>
