added down anchor

--- a/wall/templates/base.html
+++ b/wall/templates/base.html
@@ -30,5 +30,11 @@
         {% block body %}{% endblock %}
 
     </div>
+
+    <script type="text/javascript">
+    document.getElementById('down').addEventListener('click', () => {
+        document.getElementById('dummy').scrollIntoView();
+    });
+    </script>
 </body>
 </html>
