--- a/wall/templates/index.html
+++ b/wall/templates/index.html
@@ -12,7 +12,7 @@
         <div class="secondary-container">
             <div class="caption">
             <h6 class="sub-title">Today</h6>
-            <p class="sub-title"></p>
+            <p class="sub-title" id="down"><i class="fas fa-level-down-alt"></i></p>
             </div>
         </div>
 
@@ -28,7 +28,7 @@
         {% endfor %}
         </div>
     </section>
-    <section class="dummy" m-b3></section>
+    <section class="dummy m-b3" id="dummy"></section>
 
     <footer>
 
