--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
     html {
         overflow-x: hidden;
+        scroll-behavior: smooth;
     }
 
 }
@@ -122,6 +123,7 @@ button:focus {
 
 .dummy {
     height: 130px;
+    scroll-behavior: smooth;
 }
 
 .submit {
