--- a/wall/templates/index.html
+++ b/wall/templates/index.html
@@ -22,7 +22,7 @@
                 <h4 class="context">{{ story.content }}</h4>
                 <div class="caption">
                 <p class="date">{{ story.date_posted }}</p>
-                <a class="submit" href="/delete/{{ story.id }}"><p class="context"><i class="far fa-trash-alt"></i></p></a>
+                <a class="submit" href="/delete/{{ story.public_id }}"><p class="context"><i class="far fa-trash-alt"></i></p></a>
                 </div>
             </div>
         {% endfor %}
