css fix for pre

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -131,3 +131,8 @@ button:focus {
     -webkit-tap-highlight-color: transparent;
 }
 
+pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
