--- a/wall/static/css/main.css
+++ b/wall/static/css/main.css
@@ -222,6 +222,7 @@ footer .box {
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
   html {
     overflow-x: hidden;
+    scroll-behavior: smooth;
   }
 }
 
@@ -349,10 +350,16 @@ button:focus {
 
 .dummy {
   height: 130px;
+  scroll-behavior: smooth;
 }
 
 .submit {
   background: transparent;
   -webkit-tap-highlight-color: transparent;
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 /*# sourceMappingURL=main.css.map */
