added margin - index ln 25

--- a/wall/templates/index.html
+++ b/wall/templates/index.html
@@ -22,7 +22,7 @@
 <pre class="context">
 {{ story.content }}
 </pre>
-                <div class="caption">
+                <div class="caption m-t0">
                 <p class="date">{{ story.date_posted }}</p>
                 <a class="submit" href="/delete/{{ story.public_id }}"><p class="context"><i class="far fa-trash-alt"></i></p></a>
                 </div>
