added reply count

--- a/wall/templates/index.html
+++ b/wall/templates/index.html
@@ -26,6 +26,7 @@
 
                 <div class="caption m-t0">
                 <p class="date">{{ story.date_posted }}</p>
+                <p class="date"><i class="far fa-comment-dots"></i>   {{ story.reply_count }}</p>
                 <a class="submit" href="/delete/{{ story.public_id }}"><p class="context"><i class="far fa-trash-alt"></i></p></a>
                 </div>
                 
