--- a/wall/templates/reply.html
+++ b/wall/templates/reply.html
@@ -19,6 +19,7 @@
 </pre>
                 <div class="caption m-t0">
                 <p class="date">{{ parent.date_posted }}</p>
+                <p class="date"><i class="far fa-comment-dots"></i>   {{ parent.reply_count }}</p>
                 </div>
             </div>
             <p class="sub-title">Replies</p>
