--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 9vh;
+    height: 90px;
     background-color: $secondary-color;
     border-bottom: 4px solid #212020;
     position: fixed;
