--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     width: 100%;
-    height: 17vh;
+    height: 171px;
     background-color: $background;
     border-top: 4px solid $secondary-color;
     position: fixed;
