--- a/wall/static/css/main.css
+++ b/wall/static/css/main.css
@@ -89,7 +89,7 @@
 /* FONT */
 header {
   width: 100%;
-  height: 9vh;
+  height: 90px;
   background-color: #262626;
   border-bottom: 4px solid #212020;
   position: fixed;
@@ -175,7 +175,7 @@ header .container {
 
 footer {
   width: 100%;
-  height: 17vh;
+  height: 171px;
   background-color: #1c1c1c;
   border-top: 4px solid #262626;
   position: fixed;
