--- a/wall/templates/index.html
+++ b/wall/templates/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="secondary-container">
             <div class="caption">
-            <h6 class="sub-title">Today</h6>
+            <h6 class="sub-title">Posts</h6>
             <p class="sub-title" id="down"><i class="fas fa-angle-double-down"></i></p>
             </div>
         </div>
